<resources>
    <string name="app_name">Foodonet</string>
    <string name="title_activity_sql_loader_result">SqlLoaderResultActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_new_fcpublication">AddNewFCPublicationActivity</string>
    <string name="enter_title_string">מה תרצה לשתף?</string>
    <string name="address_string">מאיפה לאסוף?</string>
    <string name="start_string">אפשר לאסוף החל מ-</string>
    <string name="no_date_set_string">0000–00–00</string>
    <string name="no_time_set_string">00:00:00</string>
    <string name="end_string">ועד-</string>
    <string name="add_phone_number_string">מה מספר הטלפון?</string>
    <string name="another_details_string">פרטים נוספים</string>
    <string name="add_pic_string">הוספת תמונה</string>
    <string name="side_menu_activity_center_title">מרכז הפעילות</string>
    <string name="side_menu_going_to_take_part">בדרך לאסוף</string>
    <string name="side_menu_my_active_pubs_part">השיתופים שלי</string>
    <string name="side_menu_feedback_title">כתוב לנו</string>
    <string name="feedback_validation_text_null">תכתוב לנו משהו</string>
    <string name="feedback_progress_sending">שולח דיווח...</string>
    <string name="feedback_uimessage_thanks">תודה על תגובה!</string>
    <string name="publication_details_title">פרטי השיתוף</string>
    <string name="welcome_string">ברוכים הבאים</string>
    <string name="publish">לשתף מזון</string>
    <string name="pickup">לאסוף מזון</string>
    <string name="test_btn_text">TEST</string>
    <string name="title_all_publications">אירועים בקירבתך</string>
    <string name="share_btn">שיתוף</string>
    <string name="pickup_btn">איסוף</string>
    <string name="filter_ending_btn_text">מסתיים</string>
    <string name="filter_active_btn_text">פעיל</string>
    <string name="filter_not_active_btn_text">לא פעיל</string>
    <string name="filter_closest_btn_text">קרובים</string>
    <string name="filter_newest_btn_text">חדשים</string>
    <string name="filter_less_regs_btn_text">הכי זמין</string>
    <string name="leave_report_pub_details">דווח</string>
    <string name="start_date_time_picker_dialog_title">מתאריך‫:‬</string>
    <string name="end_date_time_picker_dialog_title">ועד תאריך‫:‬</string>
    <string name="my_pubs_list_end_date_base_string">פעיל</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_map_and_list">MapAndListActivity</string>
    <string name="title_activity_all_publications">AllPublicationsActivity</string>
    <string name="title_activity_my_publications_list">MyPublicationsListActivity</string>
    <string name="pub_det_on_the_way_to_take">בדרך לאסוף</string>
    <string name="pub_det_km_from_you">"ק''מ ממקומך"</string>
    <string name="pub_det_metr_from_you">מטרים ממקומך</string>
    <string name="pub_det_calculating_distance">מחשב מרחק...</string>
    <string name="pub_det_cant_get_distance">מרחק לא ידוע</string>
    <string name="pub_det_reports_for_pub">דיווחי משתמשים</string>
    <string name="pub_det_no_reports_for_pub">אין דיווחים</string>
    <string name="title_activity_my_publication_details">MyPublicationDetailsActivity</string>
    <string name="participants_report">Report on participants</string>
    <string name="going_to_collect">persons are going to collect</string>
    <string name="cancel_publication">cancel publication</string>
    <string name="cancel_publication_question">Really cancel this publication?</string>
    <string name="pub_det_uimessage_successfully_registered_to_pub">Successfully registered to publication</string>
    <string name="pub_det_uimessage_failed_register_to_pub">הרשמה לשיתוף נכשלה</string>
    <string name="pub_det_uimessage_failed_unregister_from_pub">ביטול הרשמה נכשל</string>
    <string name="pub_det_must_register_before_waze">חובה להרשם לשיתוף לפני ניווט אליו</string>
    <string name="pub_det_menu_item_edit">ערוך שיתוף</string>
    <string name="pub_det_menu_item_deactivate">הפוך ללא פעיל</string>
    <string name="pub_det_menu_item_delete">מחק שיתוף</string>
    <string name="pub_det_sms_default_text">רוצה לבוא לאסוף</string>
    <string name="pub_list_search_hint">חיפוש</string>
    <string name="report_dialog_whole_btn_text">נשאר עוד</string>
    <string name="report_dialog_half_btn_text">לקחתי הכול</string>
    <string name="report_dialog_few_btn_text">לא מצאתי כלום</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_edit_publication">AddEditPublicationActivity</string>
    <string name="amazon_base_url_for_images">https://s3.amazonaws.com/foodcollectordev</string>
    <string name="server_base_url">https://prv-fd-server.herokuapp.com</string>
    <string name="push_notification_prefix">/topics/dev</string>
    <string name="server_add_new_publication_path">/publications.json</string>
    <string name="server_edit_publication_path">/publications/{0}.json</string>
    <string name="server_get_publications_path">/publications</string>
    <string name="server_get_registered_for_publications">/publications/{0}/registered_user_for_publications</string>
    <string name="server_get_publication_report">/publications/{0}/publication_reports</string>
    <string name="server_post_register_to_publication">/publications/{0}/registered_user_for_publications.json</string>
    <string name="server_post_unregister_from_publication_old">/publications/{0}/registered_user_for_publications/5</string>
    <string name="server_post_unregister_from_publication">/publications/{0}/registered_user_for_publications/1?publication_version={1}&amp;active_device_dev_uuid={2}</string>
    <string name="server_post_report_to_publication">/publications/{0}/publication_reports.json</string>
    <string name="server_post_report_feedback">/feedbacks</string>
    <string name="server_post_register_user">/users</string>
    <string name="server_post_new_group">/groups</string>
    <string name="server_get_groups_by_user">/users/{0}/groups</string>
    <string name="server_post_add_members_to_group">"/group_members"</string>
    <string name="notifications_server_id">585244341740</string>
    <string name="google_analytics_id">UA-70440205-1</string>
    <string name="facebook_app_id">694275220709803</string>
    <string name="register_new_device">/active_devices.json</string>
    <string name="title_activity_my_publications">MyPublicationsActivity</string>
    <string name="title_activity_publication_details">PublicationDetailsActivity</string>
    <string name="title_fullSizeImg_activity">FullSizeImgActivity</string>
    <string name="hashtag">#FooDoNet</string>
    <string name="facebook_page_url">https://www.facebook.com/foodonet</string>
    <string name="shared_preferences_token">sp_token</string>
    <string name="shared_preferences_token_key">token_key</string>
    <string name="shared_preferences_my_location_key">my_location_key</string>
    <string name="shared_preferences_my_latitude_key">lat_key</string>
    <string name="shared_preferences_my_longitude_key">lon_key</string>
    <string name="shared_preferences_text_filter_key">text_filter_key</string>
    <string name="shared_preferences_text_filter_text_key">text_filter_text_key</string>
    <string name="shared_preferences_data_loaded">data_loaded</string>
    <string name="shared_preferences_data_loaded_key">data_loaded_key</string>
    <string name="shared_preferences_is_device_registered">is_registered</string>
    <string name="shared_preferences_is_device_registered_key">is_registered_key</string>
    <string name="shared_preferences_google_facebook_data_token">is_registered_googlefacebook</string>
    <string name="shared_preferences_is_registered_to_google_facebook_key">is_registered_googlefacebook_key</string>
    <string name="shared_preferences_pending_broadcast">pending_broadcast</string>
    <string name="shared_preferences_pending_broadcast_value">pending_broadcast_value</string>
    <string name="shared_preferences_contact_info">contact_info</string>
    <string name="shared_preferences_contact_info_name">contact_info_name</string>
    <string name="shared_preferences_contact_info_phone">contact_info_phone</string>
    <string name="shared_preferences_social_account_type_key">social_account_type</string>
    <string name="shared_preferences_social_account_name_key">social_account_name</string>
    <string name="shared_preferences_social_account_token_key">social_account_token</string>
    <string name="shared_preferences_user_data_token">user_data</string>
    <string name="shared_preferences_user_data_id_key">user_id</string>
    <string name="shared_preferences_user_data_phone_num_key">user_phone_num</string>
    <string name="image_folder_path">/Foodonet/PublicationImages</string>
    <string name="regex_israel_phone_number">^0?([57][02345678])(\\-)?\\d{7}$</string>
    <string name="file_name_part_just_shot">justShot</string>
    <string name="validation_title_empty">שם השיתוף לא יכול להיות ריק</string>
    <string name="validation_title_too_long">שם השיתוף ארוך מדיי, אורך מקסימאלי: {0} תווים</string>
    <string name="validation_address_empty">חובה למלא כתובת</string>
    <string name="validation_phone_number_empty">חובה למלא טלפון</string>
    <string name="validation_phone_number_invalid">מספר הטלפון אינו תקין</string>
    <string name="validation_start_date_after_end_date">תאריך התחלה לא יכול להיות רחוק יותר מתאריך הסיום</string>
    <string name="title_begin_pub_details">התחלה:</string>
    <string name="title_end_pub_details">סיום:</string>
    <string name="title_date_time_picker_activity">בחר תאריך ושעה</string>
    <string name="btn_ok_add_pub">בחר</string>
    <string name="btn_cancel_add_pub">בטל</string>
    <string name="get_current_location_checkbox_text">מיקום נוכחי</string>
    <string name="address_dialog_btn_ok">שמירה</string>
    <string name="address_dialog_btn_cancel">חזרה</string>
    <string name="validation_location_empty">לצורך יצירת שיתוף יש לציין את מיקומו‫.‬ ניתן ללהקליד כתובת‫,‬ לבחור מההיסטוריה או להשתמש במיקום הנוכחי‫.‬</string>
    <string name="progress_waiting_for_location">מקבל מיקום נוכחי</string>
    <string name="validation_cant_get_my_location">אופס‫..‬ המיקום לא התקבל‫.‬ נסה שוב</string>
    <string name="collector_dialog_sign_title">רישום לאיסוף</string>
    <string name="collector_dialog_register_text">יש למלא פרטי התקשרות כדי להצטרף לאיסוף</string>
    <string name="collector_dialog_name_et">שם</string>
    <string name="collector_dialog_phone_et">טלפון</string>
    <string name="collector_dialog_sign_btn">הרשם</string>
    <string name="collector_dialog_cancel_btn">בטל</string>
    <string name="report_dialog_report_title">דווח על איסוף</string>
    <string name="report_dialog_collected_part_btn">אספתי חלק</string>
    <string name="report_dialog_collected_all_btn">אספתי הכל</string>
    <string name="report_dialog_found_nothing_btn">לא נמצא כלום</string>
    <string name="report_dialog_report_btn">דווח</string>
    <string name="report_dialog_cancel_btn">בטל</string>
    <string name="feedback_dialog_title">שתפו אותנו במחשבות, הצעות או כל מה שתירצו</string>
    <string name="feedback_name_hint">שם שלך</string>
    <string name="feedback_report_hint">טקסט תגובה</string>
    <string name="feedback_btn_ok">שלח</string>
    <string name="feedback_btn_cancel">ביטול</string>
    <string name="sign_in_title">Sharing food changing society</string>
    <string name="sign_in_subtitle">Ready to get started?</string>
    <string name="sign_in_footer">Continue without Registration</string>
    <string name="sign_in_with_title">Sign in with</string>
    <string name="welcome_reg_number_string">ברוכים הבאים ל FOODONET</string>
    <string name="btn_start_sharing_string">התחל לשתף</string>
    <string name="last_step_string">LAST STEP TO START</string>
</resources>