<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center"
        android:textAlignment="center"
        android:text="@string/feedback_dialog_title"/>

    <EditText android:id="@+id/et_feedback_name"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:hint="@string/feedback_name_hint"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:hint="@string/feedback_report_hint"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1">
        <Button android:id="@+id/btn_feedback_ok"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/feedback_btn_ok"/>
        <Button android:id="@+id/btn_feedback_cancel"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/feedback_btn_cancel"/>
    </LinearLayout>

</LinearLayout>