<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:divider="@drawable/filter_tv_divider_horizontal"
    android:showDividers="middle">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/collector_dialog_height"
        android:text="@string/collector_dialog_sign_title"
        android:textSize="30sp"
        android:textColor="@color/basic_blue"
        android:layout_gravity="center_horizontal" />
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="250dp"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/collector_dialog_register_text"
            android:layout_gravity="center_horizontal" />

    <EditText
        android:singleLine="true"
        android:id="@+id/et_name_dialog_collector"
        android:inputType="textShortMessage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/collector_dialog_height"
        android:textColorHighlight="@color/basic_blue"
        android:layout_marginRight="@dimen/collector_dialog_margin"
        android:layout_marginLeft="@dimen/collector_dialog_margin"
        android:hint="@string/collector_dialog_name_et"
        />
    <EditText
        android:id="@+id/et_phone_dialog_collector"
        android:inputType="phone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/collector_dialog_height"
        android:layout_marginRight="@dimen/collector_dialog_margin"
        android:layout_marginLeft="@dimen/collector_dialog_margin"
        android:layout_marginBottom="@dimen/collector_dialog_margin"
        android:textColorHighlight="@color/basic_blue"
        android:hint="@string/collector_dialog_phone_et"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/collector_dialog_height"
        android:layout_gravity="center_horizontal"
        android:divider="@drawable/filter_btns_ll_divider_vertical_grey"
        android:showDividers="middle">


        <Button
            android:id="@+id/btn_cancel_dialog_collector"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:layout_weight="1"
            android:text="@string/collector_dialog_cancel_btn"
            />

        <Button
            android:id="@+id/btn_sign_dialog_collector"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:layout_weight="1"
            android:text="@string/collector_dialog_sign_btn"
            />
    </LinearLayout>
</LinearLayout>
</LinearLayout>