<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:divider="@drawable/filter_tv_divider_horizontal"
    android:showDividers="middle">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/report_dialog_height"
        android:text="@string/report_dialog_report_title"
        android:textSize="@dimen/report_dialog_text_size"
        android:textColor="@color/basic_blue"
        android:paddingTop="10dp"
        android:layout_gravity="center" />
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:divider="@drawable/filter_ll_divider_hotizontal"
        android:showDividers="middle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/report_dialog_height"
        android:text="@string/report_dialog_collected_part_btn"
        android:background="@color/transparent"
        android:gravity="right|center"
        android:paddingRight="@dimen/report_dialog_padding_right"
        android:textSize="@dimen/report_dialog_text_size"
        android:id="@+id/btn_report_dialog_collected_part"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/report_dialog_height"
        android:text="@string/report_dialog_collected_all_btn"
        android:background="@color/transparent"
        android:gravity="right|center"
        android:paddingRight="@dimen/report_dialog_padding_right"
        android:textSize="@dimen/report_dialog_text_size"
        android:id="@+id/btn_report_dialog_collected_all"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/report_dialog_height"
        android:text="@string/report_dialog_found_nothing_btn"
        android:background="@color/transparent"
        android:gravity="right|center"
        android:paddingRight="@dimen/report_dialog_padding_right"
        android:textSize="@dimen/report_dialog_text_size"
        android:id="@+id/btn_report_dialog_found_nothing"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/report_dialog_height"
        android:divider="@drawable/filter_btns_ll_divider_vertical_grey"
        android:showDividers="middle"
        android:layout_gravity="center_horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/report_dialog_cancel_btn"
            android:background="@color/transparent"
            android:id="@+id/btn_report_dialog_cancel"
            android:layout_gravity="center_horizontal" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/report_dialog_report_btn"
            android:background="@color/transparent"
            android:id="@+id/btn_report_dialog_report"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
    </LinearLayout>
</LinearLayout>