<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/sign_in_activity_logo"
        android:layout_marginTop="52dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_title"
        android:textColor="@color/basic_blue"
        android:id="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="170dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_subtitle"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_with_title"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <ImageButton
        android:layout_width="270dp"
        android:layout_height="42dp"
        android:id="@+id/sing_in_btn_google"
        android:src="@drawable/sign_in_google_btn"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <ImageButton
        android:layout_width="270dp"
        android:layout_height="42dp"
        android:id="@+id/sing_in_btn_facebook"
        android:layout_below="@+id/sing_in_btn_google"
        android:layout_centerHorizontal="true"
        android:src="@drawable/sign_in_btn_facebook"
        android:layout_marginTop="12dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_footer"
        android:id="@+id/sign_in_tv_continue"
        android:layout_below="@+id/sing_in_btn_facebook"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />


</RelativeLayout>
