<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/basic_blue"
        android:id="@+id/textView" />

    <ImageButton
        android:id="@+id/publishButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:background="@color/transparent"
        android:src="@drawable/done_xxh"
        android:scaleType="fitCenter"
        android:layout_marginRight="13dp"
        android:layout_marginTop="13dp"
        android:layout_alignRight="@+id/startTitle" />

    <ImageButton
        android:id="@+id/btn_menu_add_pub"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:background="@color/transparent"
        android:src="@drawable/menu_xxh"
        android:scaleType="fitCenter"
        android:textSize="38sp"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="13dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/address"
        android:layout_toEndOf="@+id/address" />

    <ImageView
        android:id="@+id/imgAddPicture"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:src="@drawable/no_photo_xxh"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/textView"/>

    <EditText
        android:id="@+id/et_title_new_publication"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:ems="10"
        android:hint="@string/enter_title_string"
        android:inputType="textShortMessage"
        android:layout_below="@+id/imgAddPicture"
        android:layout_alignRight="@+id/publishButton"
        android:layout_alignEnd="@+id/publishButton">

        <requestFocus />
    </EditText>

    <AutoCompleteTextView
        android:id="@+id/actv_address_new_publication"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:ems="10"
        android:hint="@string/address_string"
        android:layout_below="@+id/et_title_new_publication"
        android:layout_alignRight="@+id/publishButton"
        android:layout_alignEnd="@+id/publishButton" />

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Button
        android:id="@+id/end_date_picker_button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/no_date_set_string"
        android:layout_below="@+id/start_date_picker_button"
        android:layout_toLeftOf="@+id/startTitle"
        android:layout_toStartOf="@+id/startTitle" />

    <Button
        android:id="@+id/start_date_picker_button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/no_date_set_string"
        android:layout_below="@+id/actv_address_new_publication"
        android:layout_alignLeft="@+id/end_date_picker_button"
        android:layout_alignStart="@+id/end_date_picker_button" />

    <Button
        android:id="@+id/start_time_picker_button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/no_time_set_string"
        android:layout_below="@+id/actv_address_new_publication"
        android:layout_toLeftOf="@+id/end_date_picker_button"
        android:layout_toStartOf="@+id/end_date_picker_button" />

    <Button
        android:id="@+id/end_time_picker_button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/no_time_set_string"
        android:layout_below="@+id/start_date_picker_button"
        android:layout_alignLeft="@+id/start_time_picker_button"
        android:layout_alignStart="@+id/start_time_picker_button" />
    <TextView
        android:id="@+id/startTitle"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:textSize="17dp"
        android:paddingRight="11dp"
        android:text="@string/start_string"
        android:layout_below="@+id/actv_address_new_publication"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/endTitle"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:textSize="17dp"
        android:paddingRight="11dp"
        android:text="@string/end_string"
        android:layout_below="@+id/start_date_picker_button"
        android:layout_alignRight="@+id/publishButton"
        android:layout_alignEnd="@+id/publishButton" />

    <EditText
        android:id="@+id/add_phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/add_phoneNumber_string"
        android:ems="10"
        android:layout_below="@+id/end_date_picker_button"
        android:layout_alignRight="@+id/endTitle"
        android:layout_alignEnd="@+id/endTitle" />

    <EditText
        android:id="@+id/another_details"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/another_details_string"
        android:ems="10"
        android:layout_below="@+id/add_phoneNumber"
        android:layout_alignRight="@+id/endTitle"
        android:layout_alignEnd="@+id/endTitle" />

    <ImageButton
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:id="@+id/btn_camera_add_pub"
        android:layout_alignBottom="@+id/imgAddPicture"
        android:src="@drawable/camera_xxh"
        android:background="@color/transparent"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="-15dp"
        android:scaleType="fitCenter"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>